# libDaisy

./: CMakeLists.txt
Drivers/: CMakeLists.txt  notes.md  stm32h7xx.patch
Middlewares/ST/: CMakeLists.txt
cmake/: DaisyProject.cmake
core/: Makefile
examples/RTT/: Makefile  RTT.cpp
tests/: CMakeLists.txt
